# hapless

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOP.md  Makefile  README.md  USAGE.md  fast.py  long_running.py  main.py  noxfile.py  pyproject.toml  wrapless.py
.github/workflows/: draft-new-release.yml  publish-artifacts.yml  publish-new-release.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml  workflow-build-package.yml
examples/: fail_fast.py  fast.py  long_running.py  redirect_logs.py  samename.py  script.sh  show_details.py
examples/nested/: samename.py
hapless/: __init__.py  cli.py  cli_utils.py  config.py  formatters.py  hap.py  hapless.py  main.py  ui.py  utils.py  wrapper.py
tests/: conftest.py  test_cli.py  test_cli_signals.py  test_cli_utils.py  test_formatters.py  test_hap.py  test_hap_env.py  test_hap_workdir.py  test_hapless.py  test_lib_usage.py  test_spawn.py  test_ui.py  test_utils.py
tools/: create_hap.py  upload_artifacts.py
