[tool.poetry]
name = "hapless"
version = "0.2.2"
description = "Run and track processes in background"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bmwant/hapless"
keywords = ["cli", "job", "runner", "background", "process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Utilities",
    "Topic :: System",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Unix Shell"
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.9.0"
humanize = "^4.0.0"
click = "^8.1.2"
importlib-metadata = { version = "^4.11.3", python = "<3.8" }
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
ruff = "^0.0.272"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
github3-py = "^3.2.0"

[tool.poetry.scripts]
hap = 'hapless.cli:cli'

[tool.poetry.urls]
"Blog post" = "https://bmwlog.pp.ua/hapless-easily-run-and-manage-background-processes/"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
