[tool.poetry]
name = "hapless"
version = "0.9.2"
description = "Run and track processes in background"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bmwant/hapless"
keywords = ["cli", "job", "runner", "background", "process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Utilities",
    "Topic :: System",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Unix Shell",
]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^6.1.0"
humanize = "^4.1.0"
click = "^8.1.2"
rich = "^13.5.2"
importlib-metadata = { version = "^4.11.3", python = "<3.8" }
"backports.cached-property" = { version = "^1.0.2", python = "<3.8" }
# Optional dependencies installed as extras
pytest = { version = "^7.4.4", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
ruff = { version = "^0.9.0", optional = true }
nox = { version = "^2024.10.9", python = ">=3.8", optional = true }
pytest-env = [
    { version = "0.8.2", python = "<3.8", optional = true },
    { version = "^1.1.2", python = ">=3.8", optional = true },
]

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "ruff",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^3.0.0"
ruff = "^0.9.0"
nox = { version = "^2024.10.9", python = ">=3.8" }

[tool.poetry.scripts]
hap = 'hapless.cli:cli'
hapwrap = 'hapless.wrapper:wrap_hap'

[tool.poetry.urls]
"Blog post" = "https://bmwant.link/hapless-easily-run-and-manage-background-processes/"

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py37"

# ruff check
[tool.ruff.lint]
extend-select = [
    # isort
    "I",
]

[tool.pytest.ini_options]
env = [
    "HAPLESS_NO_FORK=",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
