[tool.poetry]
name = "hapless"
version = "0.15.0"
description = "Run and track processes in background"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bmwant/hapless"
keywords = ["cli", "job", "runner", "background", "process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Utilities",
    "Topic :: System",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Unix Shell",
]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^6.1.0"
humanize = "^4.1.0"
click = "^8.1.2"
rich = "^13.5.2"
django-environ = [
    { version = "^0.11.2", python = "<3.9" },
    { version = "^0.12.0", python = ">=3.9" },
]
typing-extensions = "4.0.0"
structlog = "^25.4.0"
# Optional dependencies installed as extras
pytest = { version = "^7.4.4", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
pytest-env = { version = "^1.1.2", optional = true }
ruff = { version = "^0.9.0", optional = true }
ty = { version = "^0.0.1a21", optional = true }
nox = { version = "^2024.10.9", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "ruff",
    "ty",
    "nox",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^3.0.0"
ruff = "^0.9.0"
nox = "^2024.10.9"

[tool.poetry.scripts]
hap = 'hapless.cli:cli'

[tool.poetry.urls]
"Blog post" = "https://bmwant.link/hapless-easily-run-and-manage-background-processes/"

[tool.ruff]
line-length = 88
target-version = "py38"

# ruff check
[tool.ruff.lint]
extend-select = [
    # isort
    "I",
]

[tool.ty.src]
exclude = []

[tool.pytest.ini_options]
env = [
    "HAPLESS_DEBUG=false",
    "HAPLESS_NO_FORK=false",
    "HAPLESS_REDIRECT_STDERR=false",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
